packages/hyperchad/template/tests/warnings/unknown-element.stderr
error: expected one of: curly braces, literal, parentheses, identifier, `.`, `#`, `@`, `;`, integer literal, floating point literal, `#`, identifier
 --> tests/warnings/unknown-element.rs:5:9
  |
5 |         <UnknownElement>
  |         ^
