packages/hyperchad/template/tests/warnings/unknown-element.rs
use hyperchad_template::container;

fn main() {
    let _containers = container! {
        <UnknownElement>
            "Test"
        </UnknownElement>
    };
}
